--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body {
 	font-family: 'Playfair Display', serif;;
 }
 
-#hav {
-	background: blueviolet;
+#nav {
+	background: black;
 	width: 100%;
 	height: 60px;
 	line-height: 60px;
