--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,13 @@ body {
 	height: 60px;
 	line-height: 60px;
 }
+
+#nav h1 {
+	float: left;
+}
+
+#nav h1 a {
+	text-decoration: none;
+	color: white;
+	margin-left: 25px;
+}
