--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,18 @@ body {
 	color: white;
 	margin-left: 25px;
 }
+
+#nav ul {
+	float: right;
+}
+#nav ul li {
+	text-decoration: none;
+	list-style: none;
+	display: inline-block;
+}
+
+#nav ul li a {
+	text-decoration: none;
+	color: white;
+	padding: 25px;
+}
