--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
 	text-decoration: none;
 	color: white;
 	margin-left: 25px;
+	font-family: 'Dancing Script', cursive;
 }
 
 #nav ul {
@@ -32,7 +33,7 @@ body {
 
 #nav ul li {
 	text-decoration: none;
-	list-style: none;
+	list-style-type: none;
 	display: inline-block;
 }
 
