--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 #nav {
-	background: blueviolet;
+	background: royalblue;
 	width: 100%;
 	height: 60px;
 	line-height: 60px;
@@ -25,6 +25,7 @@ body {
 	color: white;
 	margin-left: 25px;
 	font-family: 'Dancing Script', cursive;
+
 }
 
 #nav ul {
@@ -41,4 +42,16 @@ body {
 	text-decoration: none;
 	color: white;
 	padding: 25px;
+	font-family: 'Luxurious Roman', cursive;
+
+}
+
+#nav ul li :hover {
+	background: red;
+	transition: all ease-in-out 0.40s;
+}
+
+#hello {
+	background: red;
+	
 }
