--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 #nav {
-	background: royalblue;
+	background: steelblue;
 	width: 100%;
 	height: 60px;
 	line-height: 60px;
@@ -47,11 +47,22 @@ body {
 }
 
 #nav ul li :hover {
-	background: red;
+	background: darkblue;
 	transition: all ease-in-out 0.40s;
 }
 
 #hello {
-	background: red;
+	background: darkblue;
+}
+
+#hello1 {
+	background: darkblue;
+	height: 5px;
+}
+
+#hello2 {
+	background: url(images/14.jpeg) no-repeat;
+	width: 100%;
+	height: 600px;
 	
 }
