--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,8 @@ body {
 
 #hello2 {
 	background: url(images/14.jpeg) no-repeat;
-	width: 120%;
-	height: 620px;
+	width: 100%;
+	height: 600px;
+	position: center;
 
 }
