--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 #nav h1 a {
 	text-decoration: none;
-	color: white;
+	color: black;
 	margin-left: 25px;
 	font-family: 'Dancing Script', cursive;
 
@@ -40,7 +40,7 @@ body {
 
 #nav ul li a {
 	text-decoration: none;
-	color: white;
+	color: black;
 	padding: 25px;
 	font-family: 'Luxurious Roman', cursive;
 
