--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 #nav h1 a {
 	text-decoration: none;
-	color: black;
+	color: white;
 	margin-left: 25px;
 	font-family: 'Dancing Script', cursive;
 
@@ -62,6 +62,6 @@ body {
 
 #hello2 {
 	background: url(images/14.jpeg) no-repeat;
-	width: 120%;
+	width: 100%;
 
 }
