--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 #nav {
-	background: darkblue;
+	background: black;
 	width: 100%;
 	height: 60px;
 	line-height: 60px;
@@ -22,7 +22,7 @@ body {
 
 #nav h1 a {
 	text-decoration: none;
-	color: black;
+	color: white;
 	margin-left: 25px;
 	font-family: 'Dancing Script', cursive;
 
@@ -40,7 +40,7 @@ body {
 
 #nav ul li a {
 	text-decoration: none;
-	color: black;
+	color: white;
 	padding: 25px;
 	font-family: 'Luxurious Roman', cursive;
 
